--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,9 @@ name=ESP32-C3 Utils
 version=1.0.0
 author=PJ82. Spiridonov Vladislav <project82@mail.ru>
 maintainer=PJ82. Spiridonov Vladislav <project82@mail.ru>
-sentence=Utility library for ESP32-C3
-paragraph=Provides RTC, sleep, power management and crypto functions for ESP32-C3
-category=Utility
-url=https://github.com/PJ82RU/esp32-c3-utils/
+sentence=Comprehensive utility library for ESP32-C3 development
+paragraph=Includes power management, crypto functions, RTC utilities, system info and more
+category=Device Control
+url=https://github.com/PJ82RU/esp32-c3-utils
 architectures=esp32
+license=Unlicense
