--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=Comprehensive utility library for ESP32-C3 development
 paragraph=Includes power management, crypto functions, RTC utilities, system info and more
 category=Device Control
 url=https://github.com/PJ82RU/esp32-c3-utils
-architectures=esp32
+architectures=esp32c3
 license=Unlicense
